[metadata]
name = quickdocs
version = 1.2.1
description = Creates HTML docs from a project's readme and sphinx-apidoc
url = https://github.com/JoelLefkowitz/quickdocs

license_file = LICENSE.md
long-description = file: README.md
long_description_content_type = text/markdown

author = Joel Lefkowitz
author-email = joellefkowitz@hotmail.com

keywords = docs, sphinx
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[portfolio]
project_type = Pypi package
homepage = https://joellefkowitz-quickdocs.readthedocs.io
languages = Python
frameworks = Jinja
paradigms = Object Oriented Programming
status = Stable

[options]
packages = find:
include_package_data = True
python_requires = >=3.6
setup_requires = setuptools

# Exclude test packages
[options.packages.find]
exclude =
    *.tests
    *.tests.*
    tests.*
    tests
