[metadata]
name = quickdocs
version = 1.6.0

description = Creates HTML docs from a project's readme and sphinx-apidoc.
url = https://github.com/JoelLefkowitz/quickdocs

license_file = LICENSE.md
long-description = file: README.md
long_description_content_type = text/markdown

author = Joel Lefkowitz
author-email = joellefkowitz@hotmail.com

keywords = 
    docs
    documents
    sphinx
    autodoc
    apidoc

classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[portfolio]
project_type = Pypi package
status = Stable
homepage = https://joellefkowitz-quickdocs.readthedocs.io

languages = 
    Python

frameworks = 
    Jinja

paradigms = 
    Object oriented programming

[options]
packages = find:
include_package_data = True
python_requires = >=3.6
setup_requires = setuptools

[options.packages.find]
exclude =
    *.tests
    *.tests.*
    tests.*
    tests
    